k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helm-practice-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: helm-practice
  template:
    metadata:
      labels:
        app: helm-practice
    spec:
      containers:
        - name: helm-practice-containers
          image: ghcr.io/craztool/helm-practice:132c221272b691536d0f47339fb054a345cfc8a5
          ports:
            - containerPort: 80
