k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: helm-practice-service
spec:
  selector:
    app: helm-practice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
