k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helm-practice-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: practice.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: helm-practice-service
                port:
                  number: 80
